--- a/projectProposal.ipynb
+++ b/projectProposal.ipynb
@@ -12,8 +12,7 @@
     "# Kickstarter projects\n",
     "<br>\n",
     "\n",
-    "### Shoval Tanami 205627920\n",
-    "### Tamir Atia 312545536"
+    "### Shoval Tanami 205627920\n"
    ]
   },
   {
