--- a/projectProposal.ipynb
+++ b/projectProposal.ipynb
@@ -12,7 +12,7 @@
     "# Kickstarter projects\n",
     "<br>\n",
     "\n",
-    "### Shoval Tanami 205627920\n"
+    "### Shoval Tanami\n"
    ]
   },
   {
